[package]
name = "neosvr-simple-networking"
description = "Rust WebSocket Server for simple communication in NeosVR"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/snowleo/neosvr-simple-networking"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
aes-gcm = "0.10.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = "0.1.9"
tokio-test = "0.4.2"
warp = { version = "0.3.2", features = ["tls"] }
log = "0.4"
pretty_env_logger = "0.4"