[package]
name = "resonite-simple-networking"
description = "Rust WebSocket Server for simple communication in Resonite"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/snowleo/resonite-simple-networking"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
aes-gcm = "0.10.3"
futures-util = { version = "0.3.28", default-features = false, features = ["sink"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-test = "0.4.3"
warp = { version = "0.3.6", features = ["tls"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"